- Some directories could not be deleted from the favorites
- It is no longer possible to add the same directory to the favorites
  twice
- File->Current Directory menu now shows 'No Files' if there are no
  files in the current directory
- Fixed a few bugs in the File System Browser->Colors option pane
- Compound edits were rather buggy
- 'Trailing EOL' setting did not work

+ API Changes

- New method in VFS class: _canonPath().
- VFS.DirectoryEntry constructor accepting a 'color' parameter removed.
  Instead, write a VFS.DirectoryEntry subclass that overrides the
  getColor() method
- MiscUtilities.constructPath(), .getFileName(), .getParentOfPath()
  methods are now VFS-aware

* Version 4.0pre1

+ New Features

- New document model uses less memory, loads files faster, and has a
  simpler API for developers. Also, finally, the file modification flag
  is cleared when all edits up to a save are undone
- New folding features:
  - Three fold modes: none, indent, explicit. 'none' is the default now.
    'indent' is the indent-based folding mode, that behaves the same as
    indent-based folding in jEdit 3.1 and 3.2. 'explicit' parses the
    buffer for {{{ and }}} and adds folds based on that.
  - Change the fold mode by clicking the fold mode widget in the status
    bar, or in the Buffer Options dialog box, or with the 'folding'
    buffer-local property, or in the Global Options dialog box.
  - Folds are now shown in the gutter as triangles, which is more
    intuitive than filled/not-filled boxes
  - View->Folding->Collapse All Folds command, equivalent to invoking
    'Expand Folds With Level' and specifying a level of 1
  - Different text areas editing the same buffer can now have different
    folds collapsed and expanded. Previously, fold visibility was stored
    at the buffer level
- Utilities->Memory Status command to replace 'Show Free Memory' macro
- General look and feel settings moved to 'Appearance' option pane